moved store related styles to new file and fixed spacing on item tabs

--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@
 @import 'helpers/grid';
 @import 'components/header';
 @import 'components/cart';
+@import 'components/store';
 @import 'components/entry';
 @import 'components/buttons';
 @import 'components/form';
@@ -83,37 +84,4 @@ ul {
 			transform: translateX(-50%);
 		}
 	}
-}
-.shop-item {
-	width: 90%;
-	max-width: 769px;
-	margin: 0 auto;
-	position: relative;
-	@include clearfix();
-	.button {
-		margin-top: 0;
-	}
-	.info {
-		width: 50%;
-		float: left;
-		box-sizing: border-box;
-		padding-right: 30px;
-		position: absolute;
-		top: 50%;
-		@include translateY(-50%);
-		p {
-			&:last-of-type {
-				margin-bottom: 35px;
-			}
-		}
-	}
-	.attachment-post-thumbnail {
-		width: 50%;
-		float: right;
-		max-width: 370px;
-	}
-}
-.oops {
-	text-align: center;
-	padding: 120px 0;
 }
